@@ -4,6 +4,7 @@ NEW IN WAF 1.7.10
 * Codelite plugin by Christian Klein
 * Validate the versioned library number #1180
 * New export_defines keyword for C/C++/Fortran libraries
+* Python config tests enhancements #1231
 
 NEW IN WAF 1.7.9
 ----------------
